# channel_video_tools

./: .gitignore  AGENTS.md  README.md  main.py  package-lock.json  package.json  requirements-dev.txt  requirements.txt  run_dev.py
.cargo/: config.toml
.claude/skills/algorithmic-art/: .openskills.json
.claude/skills/brand-guidelines/: .openskills.json
.claude/skills/canvas-design/: .openskills.json
.claude/skills/doc-coauthoring/: .openskills.json
.claude/skills/docx/: .openskills.json
.claude/skills/frontend-design/: .openskills.json
.claude/skills/internal-comms/: .openskills.json
.claude/skills/mcp-builder/: .openskills.json
.claude/skills/pdf/: .openskills.json
.claude/skills/pptx/: .openskills.json
.claude/skills/skill-creator/: .openskills.json
.claude/skills/slack-gif-creator/: .openskills.json
.claude/skills/template/: .openskills.json
.claude/skills/theme-factory/: .openskills.json
.claude/skills/web-artifacts-builder/: .openskills.json
api/: main.py
config/: system_settings.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  dialog.js  style.css
logs/: 2025-01-30.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  png-to-ico.mjs
src-tauri/src/: lib.rs  main.rs
src/config/: settings.py
src/gui/: main_window.py  merge_tab.py  normalizer_tab.py  theme_icons.py  watermark_tab.py
src/utils/: video_merger.py  video_normalizer.py  video_watermark.py
tools/ffmpeg/: README.md
(+8 files in other folders)
